@@ -1,3 +1,7 @@
+2010-04-15  Xavier Perseguers  <typo3@perseguers.ch>
+
+	* Fixed bug #14120: Add a method to check if database is connected
+
 2010-04-14  Xavier Perseguers  <typo3@perseguers.ch>
 
 	* Set version to 1.1.2
